# m-ou-se-inline-python

./: Cargo.toml  LICENSE  README.md
ct-python/: Cargo.toml
ct-python/examples/: example.rs
ct-python/src/: lib.rs  shared.rs
examples/: Cargo.toml  context.rs  matplotlib.rs  rust-fn.rs
macros/: Cargo.toml
macros/src/: embed_python.rs  error.rs  lib.rs  run.rs  shared.rs
src/: context.rs  lib.rs  run.rs
tests/: shared_context.rs
