[package]
name = "inline-python"
version = "0.14.3"
description = "Inline Python code directly in your Rust code"
license = "BSD-2-Clause"
edition = "2024"
repository = "https://github.com/m-ou-se/inline-python"
keywords = ["python", "inline", "embed", "macro"]
autoexamples = false

[dependencies]
inline-python-macros = { version = "0.16.0", path = "./macros" }
pyo3 = { version = "0.24", default-features = false, features = ["auto-initialize"] }

[workspace]
members = ["examples", "ct-python"]
