[package]
name = "inline-python-macros"
version = "0.15.0"
description = "Macros for the inline-python crate"
license = "BSD-2-Clause"
edition = "2024"
repository = "https://github.com/m-ou-se/inline-python"

[lib]
proc-macro = true

[dependencies]
pyo3 = { version = "0.24", default-features = false, features = ["auto-initialize"] }
