[package]
name = "inline-python-macros"
version = "0.16.1"
description = "Macros for the inline-python crate"
license = "BSD-2-Clause"
edition = "2024"
repository = "https://github.com/m-ou-se/inline-python"
rust-version = "1.88.0"

[lib]
proc-macro = true

[dependencies]
pyo3 = { version = "0.25", default-features = false, features = ["auto-initialize"] }
